--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "@types/uuid": "^8.3.4",
     "typescript": "^4.9.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "jsonwebtoken": "^8.5.1",
+    "uuid": "^9.0.0"
+  }
 }
