--- a/TableEditor/TableEditor.csproj
+++ b/TableEditor/TableEditor.csproj
@@ -2,15 +2,17 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.17763.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="icons\56556.jpg" />
     <None Remove="icons\files1.png" />
     <None Remove="icons\settings1.png" />
+    <None Remove="icons\standart_user_icon.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,6 +34,7 @@
     <Resource Include="icons\settings1.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="icons\standart_user_icon.png" />
   </ItemGroup>
 
 </Project>
