--- a/TableEditor/TableEditor.csproj
+++ b/TableEditor/TableEditor.csproj
@@ -14,6 +14,7 @@
     <None Remove="icons\files1.png" />
     <None Remove="icons\settings1.png" />
     <None Remove="icons\standart_user_icon.png" />
+    <None Remove="ViewModels\wwnpuzco.qby~" />
   </ItemGroup>
 
   <ItemGroup>
