--- a/TableEditor/TableEditor.csproj
+++ b/TableEditor/TableEditor.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspose.Cells" Version="23.1.0" />
     <PackageReference Include="MaterialDesignThemes" Version="4.6.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
@@ -38,6 +39,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="icons\standart_user_icon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Experiments\" />
   </ItemGroup>
 
 </Project>
