--- a/TableEditor/TableEditor.csproj
+++ b/TableEditor/TableEditor.csproj
@@ -7,6 +7,7 @@
     <UseWPF>true</UseWPF>
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +16,10 @@
     <None Remove="icons\settings1.png" />
     <None Remove="icons\standart_user_icon.png" />
     <None Remove="ViewModels\wwnpuzco.qby~" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="icon.ico" />
   </ItemGroup>
 
   <ItemGroup>
